Update generated slides

--- a/index.html
+++ b/index.html
@@ -145,6 +145,11 @@ Powerful reporting system: it's possible to export benchmark results to markdown
 <h3>Demo</h3>
 </section>
 <section >
+<h3>Book</h3>
+<p><img src="./images/benchmarking-book.jpg" alt="Pro .NET Benchmarking: The Art of Performance Measurement" /><br/>
+<a href="https://www.apress.com/us/book/9781484249406">Pro .NET Benchmarking: The Art of Performance Measurement</a></p>
+</section>
+<section >
 <h3>Questions?</h3>
 <p><a href="https://github.com/grishace/ddd-bench"><img src="./images/qrcode.png" alt="https://github.com/grishace/ddd-bench" /></a><br/>
 <a href="https://github.com/grishace/ddd-bench"><a href="https://github.com/grishace/ddd-bench">https://github.com/grishace/ddd-bench</a></a></p>
